--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ deploy:
   bucket_name: "elasticbeanstalk-ap-south-1-979631827024"
   bucket_path: "frontend"
 on:
-  branch: main
+  branches:
+    only:
+      - main
 access_key_id: $AWS_ACCESS_KEY
 secret_access_key: "$AWS_SECRET_KEY"
