--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ deploy:
   env: "Frontend-env"
   bucket_name: "elasticbeanstalk-ap-south-1-979631827024"
   bucket_path: "frontend"
-on:
-  branches:
-    only:
-      - main
+  on:
+    branch: main
 access_key_id: $AWS_ACCESS_KEY
 secret_access_key: "$AWS_SECRET_KEY"
