Fix EBS deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "mu.ap-south-1"
-  app: "frontend-2"
-  env: "Frontend-2-env"
+  region: "ap-south-1"
+  app: "docker-react"
+  env: "Docker-react-env"
   bucket_name: "elasticbeanstalk-ap-south-1-979631827024"
   bucket_path: "frontend-2"
   on:
