Fix EBS deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "ap-south-1"
-  app: "docker-react"
-  env: "Docker-react-env"
+  app: "frontend"
+  env: "frontend-env"
   bucket_name: "elasticbeanstalk-ap-south-1-979631827024"
-  bucket_path: "docker-react"
+  bucket_path: "frontend"
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
