--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,13 +8,13 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /usr/frontend/node_modules
-      - .:/usr/frontend
+      - /app/node_modules
+      - .:/app
   tests:
     build:
       context: .
       dockerfile: Dockerfile.dev
     volumes:
-      - /usr/frontend/node_modules
-      - .:/usr/frontend
+      - /app/node_modules
+      - .:/app
     command: ["npm", "run", "test"]
